<resources>
    <string name="app_name">UI</string>
    <string name="login0">Access app lock with your fingerprint</string>
    <string name="login1">Lightly press against the sensor to verify your fingerprint</string>
    <string name="login2">Password login</string>
    <string name="cp1">产品1</string>
    <string name="cp2">产品2</string>
    <string name="cp3">产品3</string>
    <string name="cp4">产品4</string>
    <string name="cs">测试页面</string>
    <string name="hint">Type sth here</string>
    <string name="send">send</string>
</resources>
